--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,10 +1,12 @@
 *{
+  font-family: 'M PLUS Rounded 1c';
   margin: 0;
   padding: 0;
 }
 
 body{
-  font-family: "Helvetica Neue",
+  font-family: 'M PLUS Rounded 1c',
+    "Helvetica Neue",
     Arial,
     "Hiragino Kaku Gothic ProN",
     "Hiragino Sans",
