--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,118 +1,128 @@
 *{
-  font-family: 'M PLUS Rounded 1c';
-  margin: 0;
-  padding: 0;
-}
+    font-family: 'M PLUS Rounded 1c';
+    margin: 0;
+    padding: 0;
+  }
+  
+  body{
+    font-family: 'M PLUS Rounded 1c',
+      "Helvetica Neue",
+      Arial,
+      "Hiragino Kaku Gothic ProN",
+      "Hiragino Sans",
+      "BIZ UDPGothic",
+      Meiryo,
+      sans-serif;
+      position: relative;
+  }
+  
+  img{
+    position:relative;
+    white-space: pre;
+    border: 2px solid;
+    vertical-align: middle;
+    z-index: 1;
+  }
+  
+  p{
+    border-top: 1px solid;
+    border-bottom: 1px solid;
+  }
+  
+  #header_bar{
+    display: flex;
+    position: fixed;
+    margin-top: 0;
+    border-bottom: 1px solid;
+    height: 40px;
+    width: 100%;
+    background-color: aliceblue;
+    z-index: 10;
+  }
+  
+  #menu{
+    background: #0bd;
+    position: absolute;
+    top: 3.125rem;
+    right: 0;
+    overflow-x: hidden;
+    text-align: center;
+    width: 0; 
+  }
+  
+  .menu_open{
+    width: 100%;
+  }
+  
+  #menubutton_open{
+    width: 40px;
+    height: 100%;
+    font-size: 2em;
+    margin-top: 4px;
+  }
+  
+  textarea{
+    resize: none;
+    text-align: center;
+    font-size: 14px;
+    font-weight: 600;
+  }
 
-body{
-  font-family: 'M PLUS Rounded 1c',
-    "Helvetica Neue",
-    Arial,
-    "Hiragino Kaku Gothic ProN",
-    "Hiragino Sans",
-    "BIZ UDPGothic",
-    Meiryo,
-    sans-serif;
-    position: relative;
-}
+  #display_area{
+    width: calc(100% - 40px);
+    height: 95%;
+  }
 
-img{
-  white-space: pre;
-  border: 2px solid;
-  vertical-align: middle;
-}
+  #search_place{
+    width: 99%;
+    height: 20px;
+  }
+  
+  #maincontainer{
+    padding-left: 5px;
+    padding-top: 50px;
+  }
+  
+  .test0{
+    border-color: red;
+  }
+  .test1{
+    border-color: pink;
+  }
+  .test2{
+    border-color: purple;
+  }
+  
+  .EXH{
+    border-color: tomato;
+  }
+  .INF{
+    border-color: purple;
+  }
+  .GRV{
+    border-color: orange;
+  }
+  .HVN{
+    border-color: cyan;
+  }
+  .VVD{
+    border-color: pink;
+  }
+  .MXM{
+    border-color: azure;
+  }
+  .other{
+    border-color: black;
+  }
+  
+  .opa1{
+    opacity: 50%;
+  }
+  
+  .opa2{
+    opacity: 20%;
+  }
 
-p{
-  border-top: 1px solid;
-  border-bottom: 1px solid;
-}
-
-#header_bar{
-  display: flex;
-  position: fixed;
-  margin-top: 0;
-  border-bottom: 1px solid;
-  height: 40px;
-  width: 100%;
-  background-color: aliceblue;
-}
-
-#menu{
-  background: #0bd;
-  position: absolute;
-  z-index: 1;
-  top: 3.125rem;
-  right: 0;
-  overflow-x: hidden;
-  text-align: center;
-  width: 0; 
-}
-
-.menu_open{
-  width: 100%;
-}
-
-#menubutton_open{
-  width: 40px;
-  height: 100%;
-  font-size: 2em;
-  margin-top: 4px;
-}
-
-textarea{
-  resize: none;
-  width: calc(100% - 40px);
-  height: 95%;
-  text-align: center;
-  font-size: 14px;
-  font-weight: 600;
-}
-
-#maincontainer{
-  padding-left: 5px;
-  padding-top: 50px;
-}
-
-.test0{
-  border-color: red;
-}
-.test1{
-  border-color: pink;
-}
-.test2{
-  border-color: purple;
-}
-
-.EXH{
-  border-color: tomato;
-}
-.INF{
-  border-color: purple;
-}
-.GRV{
-  border-color: orange;
-}
-.HVN{
-  border-color: cyan;
-}
-.VVD{
-  border-color: pink;
-}
-.MXM{
-  border-color: azure;
-}
-.other{
-  border-color: black;
-}
-
-.EXHQ,.INFQ,.GRVQ,.HVNQ,.VVDQ,.MXMQ{
-  border-color: black;
-}
-
-.opa1{
-  opacity: 50%;
-}
-
-.opa2{
-  opacity: 20%;
-}
+  .EXHQ,.INFQ,.GRVQ,.HVNQ,.VVDQ,.MXMQ{
+    visibility: hidden;
+  }
