--- a/stylesheet.css
+++ b/stylesheet.css
@@ -39,6 +39,14 @@
     background-color: aliceblue;
     z-index: 10;
   }
+
+  #search_place{
+    display: flex;
+    position: fixed;
+    z-index: 10;
+    margin-top: 45px;
+    padding-left: 0.5%;
+  }
   
   #menu{
     background: #0bd;
@@ -80,7 +88,7 @@
   
   #maincontainer{
     padding-left: 5px;
-    padding-top: 50px;
+    padding-top: 70px;
   }
   
   .test0{
