--- a/stylesheet.css
+++ b/stylesheet.css
@@ -131,6 +131,6 @@
     opacity: 20%;
   }
 
-  .EXHQ,.INFQ,.GRVQ,.HVNQ,.VVDQ,.MXMQ{
+  .EXQ,.INQ,.GRQ,.HVQ,.VVQ,.MXQ{
     visibility: hidden;
   }
